docs(bigquery): add QueryArrow code sample and document JDK 17+ JVM requirements (#14437)
Adds a QueryArrow code sample demonstrating zero-copy VectorSchemaRoot
streaming with try-with-resources. Also documents the required
--add-opens JVM flag in queryArrow Javadoc for applications running on
JDK 17+.